--- a/templates/posts/main.html
+++ b/templates/posts/main.html
@@ -1,41 +1,217 @@
 {% extends 'base.html' %}
 {% block title %}POST{% endblock title %}
 
-{% block content %}
+{#{% block content %}#}
+{##}
+{#    <div class="ui grid">#}
+{#        <div class="row">#}
+{#            <div class="eleven wide column">#}
+{#               {% for qs in queryset %}#}
+{#                    <div class="ui fluid card">#}
+{#                        <div class="content">#}
+{#                            {{ qs.content }}#}
+{#                        </div>#}
+{#                        <div class="content">#}
+{#                            <form action="{% url 'posts:like_unlike_post' %}" method="post">#}
+{#                                {% csrf_token %}#}
+{#                                <input type="hidden" name="post_id" value={{ qs.id }}>#}
+{#                                <button type="submit" class="ui inverted green button">#}
+{#                                    {% if profile not in qs.liked.all %}#}
+{#                                        <i class="thumbs up icon"></i>&nbsp;Like#}
+{#                                    {% else %}#}
+{#                                        <i class="thumbs down icon"></i>&nbsp;Unlike#}
+{#                                    {% endif %}#}
+{#                                </button>#}
+{#                                &nbsp;{{ qs.num_likes }}#}
+{#                            </form>#}
+{#                        </div>#}
+{##}
+{#                        <div>#}
+{#                            {% if qs.comment_set.all %}#}
+{#                                {% for comment in qs.comment_set.all %}#}
+{#                                    <p>{{ comment.body }}</p>#}
+{#                                {% endfor %}#}
+{#                            {% endif %}#}
+{#                        </div>#}
+{##}
+{#                        <form action="" method="post" class="ui form">#}
+{#                            {% csrf_token %}#}
+{#                            <input type="hidden" name="post_id" value={{ qs.id }}>#}
+{#                            {{ comment_form }}#}
+{#                            <button type="submit" class="ui inverted violet button" name="submit_comment_form">#}
+{#                                Comment#}
+{#                            </button>#}
+{#                        </form>#}
+{#                    </div>#}
+{#               {% endfor %}#}
+{#            </div>#}
+{#            <div class="five wide column">#}
+{#                {% if post_added %}#}
+{#                    <div class="ui green message">Post Added</div>#}
+{#                {% endif %}#}
+{#                <form action="" method="post" enctype="multipart/form-data" class="ui form">#}
+{#                    {% csrf_token %}#}
+{#                        {{ post_form }}#}
+{#                    <button type="submit" class="ui inverted blue button" name="submit_post_form">#}
+{#                        Post#}
+{#                    </button>#}
+{#                </form>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+{##}
 
-    <div class="ui grid">
-        <div class="row">
-            <div class="eleven wide column">
-               {% for qs in queryset %}
-                    <div class="ui fluid card">
-                        <div class="content">
-                            {{ qs.content }}
-                        </div>
-                        <div class="content">
-                            <form action="{% url 'posts:like_unlike_post' %}" method="post">
-                                {% csrf_token %}
-                                <input type="hidden" name="post_id" value={{ qs.id }}>
-                                <button type="submit" class="ui primary button">
+{# $('.like-form').submit(function(e){#}
+{#                e.preventDefault()#}
+{##}
+{#                const post_id = $(this).attr('id')#}
+{##}
+{#                const likeText = $(`.like-btn${post_id}`).text()#}
+{#                const trim = $.trim(likeText)#}
+{##}
+{#                const url = $(this).attr('action')#}
+{##}
+{#                let res;#}
+{#                const likes = $(`.like-count${post_id}`).text()#}
+{#                const trimCount = parseInt(likes)#}
+{##}
+{#                $.ajax({#}
+{#                    type: 'POST',#}
+{#                    url: url,#}
+{#                    data: {#}
+{#                        'csrfmiddlewaretoken': $('input[name=csrfmiddlewaretoken]').val(),#}
+{#                        'post_id':post_id,#}
+{#                    },#}
+{#                    success: function(response) {#}
+{#                        if(trim === 'Unlike') {#}
+{#                            $(`.like-btn${post_id}`).text('Like')#}
+{#                            res = trimCount - 1#}
+{#                        } else {#}
+{#                            $(`.like-btn${post_id}`).text('Unlike')#}
+{#                            res = trimCount + 1#}
+{#                        }#}
+{##}
+{#                        $(`.like-count${post_id}`).text(res)#}
+{#                    },#}
+{#                    error: function(response) {#}
+{#                        console.log('error', response)#}
+{#                    }#}
+{#                })#}
+{##}
+{#            })#}
+
+{##}
+{#{% endblock content %}#}
+{% block content %}
+<div class="ui grid">
+    <div class="eleven wide column">
+        {% for qs in queryset %}
+          <div class="ui fluid card">
+            <div class="content">
+                <div class="right floated meta">
+                <div class="ui grid">
+                    <div class="row">
+                        {% ifequal request.user qs.author.user %}
+                            <a href="{% url 'posts:post-update-view' qs.pk  %}"><button class="ui positive basic button ">Update</button></a>
+                            <a href="{% url 'posts:post_delete_view' qs.pk %}"><button class="ui negative basic button ">Delete</button></a>
+                        {% endifequal %}
+                    </div>
+                </div>
+
+                </div>
+                <img class="ui avatar image" src={{qs.author.avatar.url}}>
+                {{ qs.author.user }} - {{ qs.created|timesince}} ago
+            </div>
+            <div class="ui fluid image">
+                {% if qs.image %}
+                    <img src={{qs.image.url}}>
+                {% endif %}
+            </div>
+                <div class="content">
+                    <p> {{ qs.content }} </p>
+                    <div class="right floated">
+                        <form action="{% url 'posts:like_unlike_post' %}" method="POST" class='like-form' id='{{qs.id}}'>
+                            {% csrf_token %}
+                            <input type="hidden" name="post_id" value={{qs.id}}>
+
+                                <button type="submit" class="ui inverted violet button like-btn{{qs.id}}">
                                     {% if profile not in qs.liked.all %}
-                                        <i class="thumbs up icon"></i>&nbsp;Like
+                                        Like
                                     {% else %}
-                                        <i class="thumbs down icon"></i>&nbsp;Unlike
+                                        Unlike
                                     {% endif %}
                                 </button>
-                                &nbsp;{{ qs.num_likes }}
-                            </form>
-                        </div>
+                                <div class="ui grid">
+                                    <div class="column">
+                                        <div class="like-count{{qs.id}}"> {{qs.num_likes}} </div>
+                                    </div>
+                                    <div class="column">
+                                        likes
+                                    </div>
+                                </div>
+                        </form>
                     </div>
-               {% endfor %}
-            </div>
-            <div class="five wide column">
-                FORM
+                    <i class="comment icon"></i>
+                    <span> {{ qs.num_comments }} comments</span>
+                </div>
 
+                <div class="extra content">
+                    <div class="mb-5">
+                </div>
+
+                <button class="cmt_btn ui inverted violet button mb-5">show / hide comments</button>
+                    <div class="comment-box">
+                    {% if qs.comment_set.all %}
+                        {% for comment in qs.comment_set.all %}
+                            <div class="ui segment mb-5">
+                                <img class="ui avatar image" src={{comment.user.avatar.url}}>
+                                <span>{{ comment.user }}</span>
+                                <div class='mt-5'>{{ comment.body }}</div>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                    </div>
+
+                    <form action="" method="POST"class='ui fluid form'>
+                        {% csrf_token %}
+                        <input type="hidden" name="post_id" value={{qs.id}}>
+                        {{ comment_form }}
+                        <button type="submit" name="submit_comment_form" class="ui inverted teal button mt-5 w-full">Send</button>
+                    </form>
+                </div>
             </div>
+        {% endfor %}
+    </div>
+    <div class="five wide column">
+        <div class="ui segment">
+            {% if post_added %}
+                <div class="ui green message">Post added</div>
+            {% endif %}
+            <form action="" method="POST" class='ui form' enctype="multipart/form-data">
+                {% csrf_token %}
+                {{post_form}}
+                <button type='submit' name="submit_post_form" class="ui inverted primary button w-full mt-5">Send</button>
+            </form>
         </div>
     </div>
-
-
+</div>
 {% endblock content %}
+
+{% block scripts %}
+    <script>
+        $( document ).ready(function() {
+            let display = false
+            $(".cmt_btn").click(function () {
+                if (display===false) {
+                    $(this).next(".comment-box").show("slow");
+                    display=true
+                } else {
+                    $(this).next(".comment-box").hide("slow");
+                    display=false
+                }
+            });
+        });
+    </script>
+{% endblock scripts %}
 
 
