--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,11 +1,18 @@
+{% url 'home-view' as path_to_home %}
+{% url 'posts:post_comment_create_and_list' as path_to_posts %}
+{% url 'profiles:my-profile' as path_to_my_profile %}
+{% url 'profiles:invites_received_view' as path_to_my_invites %}
+{% url 'profiles:invites_profiles_list' as path_to_invites %}
+{% url 'profiles:profiles_list' as path_to_all_profiles %}
+
 <div class="ui inverted menu nav mb-7">
   <div class="ui container">
-    <a href="" class="item">
+    <a href="{{path_to_home}}" class="{% if request.path == path_to_home %}active{% endif %} item">
         <h3>Social Network</h3>
     </a>
     {% if request.user.is_authenticated %}
-    <a href="" class="item">
-        Home
+    <a href="{{path_to_posts}}" class="{% if request.path == path_to_posts %}active{% endif %} item">
+        Posts
     </a>
     {% endif %}
 
@@ -15,14 +22,14 @@
             <div class="ui floating dropdown icon button teal"> Friends
                 <i class="dropdown icon"></i>
                 <div class="menu">
-                    <a href="" class="item">
+                    <a href="{{path_to_all_profiles}}" class="{% if request.path == path_to_all_profiles %}active{% endif %} item">
                         All Profiles
                     </a>
-                    <a href="" class="item">
+                    <a href="{{path_to_invites}}" class="{% if request.path == path_to_invites %}active{% endif %} item">
                         Send Invites
                     </a>
-                    <a href="" class="item">
-                        Received Invites
+                    <a href="{{path_to_my_invites}}" class="{% if request.path == path_to_my_invites %}active{% endif %} item">
+                        Received Invites &nbsp; <div class="ui purple horizontal label">{{invites_num}}</div>
                     </a>
                 </div>
              </div>
@@ -37,15 +44,16 @@
             </form>
             </div>
 
-            <a href="" class="item">
+            <a href="{{path_to_my_profile}}" class="{% if request.path == path_to_my_profile %}active{% endif %} item">
+                <img src={{picture.url}} class="ui avatar image">&nbsp;&nbsp;
                  {{ request.user }}
             </a>
 
-            <a href="" class="ui item">
+            <a href="{% url 'account_logout' %}" class="ui item">
                 Logout
             </a>
         {% else %}
-        <a href="" class="ui item">
+        <a href="{% url 'account_login' %}" class="ui item">
                 Login
             </a>
         {% endif %}
